# 41069_WS_LAB4_G1

./: README.md
CPP_WS/Pablo_CPP/: CMakeLists.txt  package.xml
Python_WS/Pablo/: package.xml  setup.cfg  setup.py
pablo/: CMakeLists.txt  package.xml
pablo/launch/: pablo_launch.py
pablo/output/: waypoints.csv
pablo/scripts/: image_processor.py  image_processor_high_detail.py  image_processor_high_detail_old.py
pablo/src/: my_cpp_node.cpp  path_planning.cpp  path_planning.h  rviz_streamer.cpp  test  ur3e_control.cpp  ur3e_control.h  ur3e_move.cpp
pablo/web/: index.html  pablo2.html  pablo3.html  pabloFinal.html  pabloGUI.html  pabloUI.html  test_rviz_fixed.html  ur3e.urdf
pablo/web/old html/: pablo.html  pablo3.html
pablo/web/unity-build/: index.html
