<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>pablo</name>
  <version>0.0.1</version>
  <description>ROS 2 package for a selfie drawing robot "Pablo" with C++ and Python nodes</description>
  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>python3-rembg</depend>
  <depend>opencv-python</depend>
  <depend>python3-torch</depend>
  <depend>python3</depend>
  <depend>std_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
